--- a/login.html
+++ b/login.html
@@ -28,6 +28,13 @@
         color: #ffffff;
       }
 
+      .img-login {
+        background-image: url('./images/da-nang/toa-nha-dn.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+
       @media only screen and (max-width: 1025px) {
         .reponsive-img-login {
           display: none;
@@ -67,14 +74,10 @@
           overflow: hidden;
           background-color: #001119ef;
           color: #ffffff;
+          min-height: 600px;
         "
       >
-        <div class="col-lg-6 bg-danger p-0 reponsive-img-login">
-          <img
-            src="./images/da-nang/toa-nha-dn.jpg"
-            style="width: 100%; height: 600px; object-fit: cover"
-          />
-        </div>
+        <div class="col-lg-6 bg-danger p-0 reponsive-img-login img-login"></div>
         <div
           class="
             col-lg-6
