--- a/ban-do-3d.html
+++ b/ban-do-3d.html
@@ -6,8 +6,9 @@
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
-    <title>Smartcity - Building Map</title>
+    <title>Tòa nhà hành chính Đà Nẵng</title>
 
+    <link rel="icon" href="./images/logo-dn.png" />
     <style>
       html,
       body,
