--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="icon" href="./images/logo-dn.png" />
     <style>
       /* Style for scrollbar */
-      /* width */
       ::-webkit-scrollbar {
         width: 8px;
       }
@@ -37,6 +36,7 @@
         margin: 0;
         box-sizing: border-box !important;
       }
+
       .img-cover {
         background: url(./images/cover2.jpg);
         height: 100vh;
@@ -45,32 +45,38 @@
         background-repeat: no-repeat;
         background-size: cover;
       }
+
       .filter-img-cover {
         background-image: linear-gradient(to top, #00111981, #00111900);
         width: 100%;
         height: 100%;
       }
+
       .bg-dark-cover {
         background-color: #0011190e !important;
       }
+
       .nav-link {
         color: #ffffffb2 !important;
       }
+
       .nav-link-active {
         color: #ffffff !important;
       }
+
       .my-button {
         color: #ffffff !important;
         border: 2px solid #ffffff;
         border-radius: 0px;
         background-color: #00111900;
       }
+
       .my-button:hover {
         color: #ffffff !important;
         background-color: #00111998 !important;
       }
+
       .card {
-        /* border: 2px solid #001119; */
         padding: 2rem;
         margin: 1rem;
         max-width: 250px;
@@ -79,11 +85,8 @@
       }
 
       .card:hover {
-        /* position: absolute; */
         cursor: pointer;
-        /* border: 1px solid #012535; */
         box-shadow: 0px 0px 10px #ffffff;
-        /* background-color: #00111998; */
       }
 
       .card-img-top {
@@ -100,7 +103,7 @@
             class="navbar navbar-expand-lg navbar-light bg-dark-cover"
             style="padding: 0.5rem 4rem"
           >
-            <a class="navbar-brand" href="#"
+            <a class="navbar-brand" href="/"
               ><img
                 src="./images/logo-dn.png"
                 style="width: 48px; border-radius: 50%"
@@ -339,12 +342,6 @@
               ấn văn hoá của người Đà Nẵng hôm nay gửi lại muôn đời con cháu mai
               sau.
             </div>
-            <!-- <div class="col-md-6">
-              <img
-                src="./images/da-nang/cau-rong.jpg"
-                style="height: 500px; width: 500px; object-fit: cover"
-              />
-            </div> -->
             <div
               class="col-md-6"
               style="height: 500px; width: 100%; overflow: hidden"
