--- a/appointment.html
+++ b/appointment.html
@@ -185,7 +185,7 @@
               style="color: #ffffff; font-size: 5vw; text-align: center"
               class="m-3"
             >
-              SỰ KIỆN
+              ĐẶT LỊCH HẸN
             </h1>
           </div>
         </div>
