--- a/index.html
+++ b/index.html
@@ -413,12 +413,12 @@
         </div>
         <div class="row m-4 w-75">
           <div class="col-lg-6">
-            <h4>Lorem ipsum</h4>
+            <h4>ĐÀ NẴNG</h4>
             <hr style="background-color: #ffffff" />
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et
-              aliquid dolorem nisi illo quis voluptatibus, tempora quaerat ab
-              excepturi recusandae.
+            <p class="text-justify">
+              Đà Nẵng là một thành phố trực thuộc trung ương, nằm trong vùng
+              Duyên hải Nam Trung Bộ Việt Nam, là thành phố trung tâm và lớn
+              nhất khu vực miền Trung - Tây Nguyên.
             </p>
             <img
               src="./images/facebook-logo.png"
@@ -444,27 +444,28 @@
           <div class="col-lg-6">
             <div class="row">
               <div class="col-md-4">
-                <h4>Lorem ipsum</h4>
+                <h4>Bản đồ 3D</h4>
                 <hr style="background-color: #ffffff" />
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et
-                  ab excepturi recusandae.
+                <p class="text-justify">
+                  Cho phép xem bản đồ của tòa nhà hành chính Đà Nẵng và các công
+                  trình liên quan khác.
+                  <a href="#">Xem ngay</a>
                 </p>
               </div>
               <div class="col-md-4">
-                <h4>Lorem ipsum</h4>
+                <h4>Lịch hẹn</h4>
                 <hr style="background-color: #ffffff" />
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et
-                  ab excepturi recusandae.
+                <p class="text-justify">
+                  Đặt lịch hẹn làm việc tại tòa nhà hành chính Đà Nẵng.
+                  <a href="#">Đặt lịch ngay</a>
                 </p>
               </div>
               <div class="col-md-4">
-                <h4>Lorem ipsum</h4>
+                <h4>Sự kiện</h4>
                 <hr style="background-color: #ffffff" />
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Et
-                  ab excepturi recusandae.
+                <p class="text-justify">
+                  Xem danh sách các sự kiện diễn ra ở Đà Nẵng.
+                  <a href="#">Xem ngay</a>
                 </p>
               </div>
             </div>
