--- a/login.html
+++ b/login.html
@@ -78,7 +78,7 @@
           min-height: 600px;
         "
       >
-        <div class="col-lg-6 bg-danger p-0 reponsive-img-login img-login"></div>
+        <div class="col-lg-6 p-0 reponsive-img-login img-login"></div>
         <div
           class="
             col-lg-6
